<?xml version="1.0"?>
<package format="2">
  <name>samples</name>
  <version>0.0.0</version>
  <description>PCL samples</description>
  <maintainer email="test@todo.todo">test</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
